// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render user block element for authorized user 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <a
      href="/mylist"
      onClick={[Function]}
    >
      <img
        alt="User avatar"
        height="63"
        src=""
        width="63"
      />
    </a>
  </div>
</div>
`;

exports[`Render user block element for not authorized user 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
